fixes for item with dynamic attr similarity